hice pagina web

--- a/Actividad2.html
+++ b/Actividad2.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="caja.css" />
     <title>Document</title>
   </head>
-  <body class="caja contenedor">
+  <body class="caja-contenedor">
     <div class="borde">
       <h1>Bienvenido</h1>
       <div>
@@ -20,7 +20,10 @@
             Login
           </button>
         <div>
+
       </div>
+      <a href="¿Perdiste tu contraseña?"></a>
+      <a href="¿No tienes cuenta?Registrate"></a>
     </div>
   </body>
 </html>
