Continue con ejercecios

--- a/javascript/manipulacion-dom/ejercicio/actividadjs.html
+++ b/javascript/manipulacion-dom/ejercicio/actividadjs.html
@@ -7,9 +7,12 @@
   </head>
   <body>
     <h1>Tareas</h1>
-    <input id="input-task" type ="text" placeholder="Tarea 1" />
+    <input id="user" type ="text" placeholder="usuario" />
+    <input id="password" type ="text" placeholder="contraseña" />
+     
     <button onclick="addTask()" >Agregar Tarea</button>
     <ul id="task-list"></ul>
     <script src="script2.js"></script>
   </body>
+  /*
 </html>
