--- a/javascript/asincronia/Actividad2.html
+++ b/javascript/asincronia/Actividad2.html
@@ -10,13 +10,13 @@
     <div class="borde">
       <h1>Bienvenido</h1>
       <div>
-        <input type="text" placeholder="usuario" />
+        <input type="text" placeholder="usuario" id="usuario"/>
       </div>
       <div>
-        <input type="password" placeholder="contraseña" />
+        <input type="password" placeholder="contraseña" id="contraseña" />
       </div>
       <div class="contenedor">
-        <button class="boton">
+        <button class="boton" onclick="addLogin()">
             Login
           </button>
         <div>
@@ -25,5 +25,6 @@
       <a href="¿Perdiste tu contraseña?"></a>
       <a href="¿No tienes cuenta?Registrate"></a>
     </div>
+    <script src="actividad.js"></script>
   </body>
 </html>
